--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
       <br>
       <div id = "social">
          <ul>
-            <li><a href="http://www.facebook.com" target="_blank"> <img src="http://icons.iconarchive.com/icons/yootheme/social-bookmark/512/social-facebook-box-blue-icon.png" alt="facebook"></a></li>
-            <li><a href="http://twitter.com" target="_blank"> <img src="https://www.sketchappsources.com/resources/source-image/twitterlogo_1x.png" alt="twitter"></a></li>
-            <li><a href="http://digg.com/" target="_blank"> <img src="http://files.softicons.com/download/social-media-icons/social-bookmarks-icon-set-by-yootheme/png/64x64/social_digg_box_blue.png" alt= "digg"></a></li>
-            <li><a href="http://plus.google.com" target="_blank"> <img src="https://seeklogo.com/images/G/google-icon-logo-F8DBA0521D-seeklogo.com.png" alt= "google"> </a></li>
+            <li><a href="https://www.facebook.com" target="_blank"> <img src="https://icons.iconarchive.com/icons/yootheme/social-bookmark/512/social-facebook-box-blue-icon.png" alt="facebook"></a></li>
+            <li><a href="https://twitter.com" target="_blank"> <img src="https://www.sketchappsources.com/resources/source-image/twitterlogo_1x.png" alt="twitter"></a></li>
+            <li><a href="https://digg.com/" target="_blank"> <img src="https://files.softicons.com/download/social-media-icons/social-bookmarks-icon-set-by-yootheme/png/64x64/social_digg_box_blue.png" alt= "digg"></a></li>
+            <li><a href="https://plus.google.com" target="_blank"> <img src="https://seeklogo.com/images/G/google-icon-logo-F8DBA0521D-seeklogo.com.png" alt= "google"> </a></li>
          </ul>
       </div> 
       
