--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div> 
       
       <div class="GH">
-      <a href="https://github.com/nowos/Responsive-Images" title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
+      <a href="//github.com/udacity/responsive-images/tree/master/project/final" title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
       </div>
    </body>
 </html>
