--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <h1>My responsive blog</h1>
       <article>
          <picture>
-            <source media = "(max-width: 800px)" srcset = "images/still_life-1600_large_2x.jpg 2x, _images_still_life1.jpg 1x, still_life-1600_large_2x.jpg" >
+            <source media = "(max-width: 800px)" srcset = "images/still_life-1600_large_2x.jpg 2x, images/images_still_life1.jpg 1x, still_life-1600_large_2x.jpg" >
             <img src="images/still_life-1600_large_2x.jpg" alt="still_life">
          </picture>
          <h2>My story</h2>
          <p>I love cheese, especially manchego swiss. <span style="font-size: 25px">&#x263A;</span> Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
          <figure>
             <picture>
-               <source media = "(max-width: 800px)" srcset = "images/horses-1600_large_2x.jpg 2x, images/_images_horses1.jpg 1x, images/horses-1600_large_2x.jpg" >
+               <source media = "(max-width: 800px)" srcset = "images/horses-1600_large_2x.jpg 2x, images/images_horses1.jpg 1x, images/horses-1600_large_2x.jpg" >
                <img src="images/horses-1600_large_2x.jpg">
             </picture>
             <figcaption>Horses in Hawaii</figcaption>
@@ -33,7 +33,7 @@
          <p>Manchego cheese strings hard cheese. Say cheese swiss cheese strings squirty cheese mozzarella feta the big cheese halloumi. Cheddar cheese and biscuits cut the cheese queso hard cheese red leicester parmesan st. agur blue cheese. Smelly cheese caerphilly hard cheese cream cheese cream cheese the big cheese feta squirty cheese. Babybel fromage edam lancashire.</p>
          <figure>
             <picture>
-               <source media = "(max-width: 800px)" srcset = "images/volt-1600_large_2x.jpg 2x, images/_images_volt3.jpg 1x, images/volt-1600_large_2x.jpg" >
+               <source media = "(max-width: 800px)" srcset = "images/volt-1600_large_2x.jpg 2x, images/images_volt3.jpg 1x, images/volt-1600_large_2x.jpg" >
                <img src="images/volt-1600_large_2x.jpg">
             </picture>
             <figcaption>Sign in an old Berlin power station</figcaption>
@@ -61,7 +61,7 @@
          <p>Pecorino pepper jack cheesy feet. Smelly cheese cauliflower cheese fromage halloumi cream cheese who moved my cheese fromage fondue. Feta danish fontina cheesy grin mozzarella fromage cheesy grin airedale paneer. Cheddar halloumi cheese and biscuits jarlsberg cheese and biscuits cheese and biscuits squirty cheese.</p>
          <figure>
             <picture>
-               <source media = "(max-width: 800px)" srcset = "images/grasshopper-1600_large_2x.jpg 2x, images/_images_grasshopper6.jpg 1x, images/grasshopper-1600_large_2x.jpg" >
+               <source media = "(max-width: 800px)" srcset = "images/grasshopper-1600_large_2x.jpg 2x, images/images_grasshopper6.jpg 1x, images/grasshopper-1600_large_2x.jpg" >
                <img src="images/grasshopper-1600_large_2x.jpg">
             </picture>
             <figcaption>Grasshopper on an Akubra hat</figcaption>
@@ -70,7 +70,7 @@
          
          <figure>
             <picture>
-               <source media = "(max-width: 800px)" srcset = "images/sfo-1600_large_2x.jpg 2x, _images_sfo2.jpg 1x, images/sfo-1600_large_2x.jpg" >
+               <source media = "(max-width: 800px)" srcset = "images/sfo-1600_large_2x.jpg 2x, images/images_sfo2.jpg 1x, images/sfo-1600_large_2x.jpg" >
                <img src="images/sfo-1600_large_2x.jpg">
             </picture>
             <figcaption>Near SFO</figcaption>
@@ -79,7 +79,7 @@
          <p>Say cheese swiss cheesy grin. Cheese on toast queso bocconcini cheeseburger fondue manchego smelly cheese port-salut. Cream cheese cheese and wine airedale cheeseburger chalk and cheese cauliflower cheese fondue smelly cheese. Queso manchego.</p>
          <figure>
             <picture>
-               <source media = "(max-width: 800px)" srcset = "images/rosella-1600_large_2x.jpg 2x, images/_images_rosella1.jpg 1x, images/rosella-1600_large_2x.jpg" >
+               <source media = "(max-width: 800px)" srcset = "images/rosella-1600_large_2x.jpg 2x, images/images_rosella1.jpg 1x, images/rosella-1600_large_2x.jpg" >
                <img src="images/rosella-1600_large_2x.jpg">
             </picture>
             <figcaption>Australian rosella</figcaption>
